# cozer

./: .gitignore  EnduranceRaces.md  MAINTENANCE_PLAN.md  MultipleDriversPerBoat.md  ProjectHome.md  README.md  README.txt  TimeTrials.md  Ubuntu_install.sh  WindowsUsage.md  data.json  environment-ref.yml  environment.yml  pyproject.toml  setup.py
cozer/: __init__.py  __main__.py  __version__.py  _py2compat.py  analyzer.py  buildmenus.py  classes.py  countries.py  datatable.py  native.py  phases.py  prefs.py  qualification.py  raceclock.py  racepattern.py  records.py  reports.py  seeding.py  store.py  sub_nbs.py  tables.py  timers.py  validate.py
docs/: LIVE.md  PHASES.md  RELEASE.md  REPORTS.md  broadcast-urls.md  feed-index.html  index.html  install-windows.et.md  install-windows.md  live-viewer.html  whats-new.et.md  whats-new.md
events/: EMV_I_Harku_2025.coz  Endurance_EC1_Parnu_2013.coz  ec2001_o125.coz
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_29914d8a17dcefca___init___py.html  z_29914d8a17dcefca_common_py.html  z_29914d8a17dcefca_endurance_py.html  z_29914d8a17dcefca_final_py.html  z_29914d8a17dcefca_inspection_py.html  z_29914d8a17dcefca_intermediate_py.html  z_29914d8a17dcefca_labels_py.html  z_29914d8a17dcefca_laps_py.html  z_29914d8a17dcefca_latexish_py.html  z_29914d8a17dcefca_letters_py.html  z_29914d8a17dcefca_output_py.html  z_29914d8a17dcefca_participants_py.html  z_29914d8a17dcefca_qsummary_py.html  z_29914d8a17dcefca_render_py.html  z_29914d8a17dcefca_timetrial_py.html  z_2fe391020e07fd65___init___py.html  z_2fe391020e07fd65___main___py.html  z_2fe391020e07fd65__py2compat_py.html  z_2fe391020e07fd65_analyzer_py.html  z_2fe391020e07fd65_classes_py.html  z_2fe391020e07fd65_countries_py.html  z_2fe391020e07fd65_native_py.html  z_2fe391020e07fd65_phases_py.html  z_2fe391020e07fd65_qualification_py.html  z_2fe391020e07fd65_raceclock_py.html  z_2fe391020e07fd65_racepattern_py.html  z_2fe391020e07fd65_records_py.html  z_2fe391020e07fd65_seeding_py.html  z_2fe391020e07fd65_store_py.html  z_2fe391020e07fd65_validate_py.html  z_9a24e56fc184abaf_broadcast_py.html  z_9a24e56fc184abaf_classpart_py.html  z_9a24e56fc184abaf_crashreport_py.html  z_9a24e56fc184abaf_dialogs_py.html  z_9a24e56fc184abaf_editor_py.html  z_9a24e56fc184abaf_grids_py.html  (+5 more)
installer/: README.md  construct.yaml  cozer-debug.bat  cozer-launch.pyw  install_cozer.py  make_shortcut.bat  make_shortcut.ps1  post_install.bat
led/: Tallinn2024.py  ampron.py  clock.py  lqpetamine2024.py
legacy/: README.txt  build_legacy_env.sh  conda_install.sh  install.py  run_legacy.sh  screenshot_legacy.sh  screenshot_page.py
samples/: build_sample.py  build_sample_legacy.py  sample_regatta_2026.cozj  sample_regatta_2026_legacy.cozj
tests/: conftest.py  test_analyzer_2026.py  test_analyzer_equivalence.py  test_app.py  test_broadcast.py  test_bump_version.py  test_classes.py  test_codec_fidelity.py  test_countlaps.py  test_crashreport.py  test_dialogs.py  test_e2e.py  (+23 more)
(+135 files in other folders)
