[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cozer"
version = "3.0.0.dev0"
description = "COZER - COmpetition organiZER (modernized): organize powerboat racing events under U.I.M. Circuit Rules"
requires-python = ">=3.13"
authors = [{ name = "Pearu Peterson" }]
readme = "README.md"

[tool.setuptools.packages.find]
include = ["cozer*"]
exclude = ["legacy*", "tests*", "tools*", "led*"]

[tool.setuptools.package-data]
cozer = ["rulesets/*.cozj"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path so `import cozer` works under the bare `pytest`
# console script (CI), not only under `python -m pytest`.
pythonpath = ["."]
addopts = "-ra --cov=cozer --cov-report=term-missing"

[tool.coverage.run]
source = ["cozer"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
